refactor(controller): optimize WelcomeController
- Remove unused handleBrowseAction method
- Replace getFiles().get(0) with getFirst()
- Improve code readability with modern Java features